# bigkillmachine

./: HOWTO  Makefile  Makefile.defs  Makefile.rules  README  README.md  TODO  a.out  bigkillmachine.sh  bootpar.c  br-package-Makefile.in  dbus-print-message.c  dsq  inot.c  kfg  klog-client.c  klogwatch.c  konfigure  m  nemohook.c  otv-makefile.am  otvlog.h  rcS  sqlite_hook.h
BUILDS/: bkm  daxia
PATCH/: Log.js
PATCH/otvlog/: Makefile.am  nsulog.c  otvlog.h
SRCS/daben/: Makefile  klog-bench.c
SRCS/dadai/: Makefile
SRCS/dagou/: Makefile  dagou_dbus.c  dagou_ioctl.c  dalog.c  dalog_setup.h  dbus-print-message.c  dbus-print-message.h  helper.c  nbuf.h
SRCS/daxia/: Makefile  daxia.c
SRCS/dr/: Makefile  dr.c
SRCS/inotdo/: Makefile  inotdo.c
SRCS/ldmon/: Makefile  ldmon.c
SRCS/loadmon/: README  ldmon.c
SRCS/muzei/: Makefile  muzei.c
dagou/: Makefile  dagou_dbus.c  dagou_gconf.c  dagou_ioctol.c  dagou_nsulog.c  dagou_sqlite.c  dagou_syslog.c  dalog.c  dalog_setup.c  dalog_setup.h  dbus-print-message.c  dbus-print-message.h  helper.h  narg.c  narg.h  nbuf.c
dagou/dalog/: dalog.c  dalog.h
dagou/test/: test-klog.c  test-main.c
dalogsewer/: Makefile  dalogsewer.c
daxia/: Makefile  daxia.notify
dazhu/: bkm.do  bkm.undo  bkmpost.sh  cfgget  cfgset  dabao  dapei  daxia  dr  drs  ds  fmtTime.py  inotdo  m  muzei  otvapp.list  otvlog  patch  replace_webkit  setupdazhu
dazhu/dabie/: replace_webkit
dazhu/patch/: Log.js  dbus-connection.c  ipnetwork_Makefile.am
doc/: README.md
dr/: Makefile  dr.c
hook/: Makefile  dbus-print-message.c  dbus-print-message.h  log_monitor.c  log_monitor.h  nemohook.c  nh_dbus.c  nh_gconf.c  nh_helper.c  nh_helper.h  nh_ioctl.c  nh_klog.c  nh_nhlog.c  nh_sqlite.c  nh_syslog.c
hook/dbus/: dbus_dbus_connection_dispatch_hook.patch
hook/test/: Makefile  test-klog.c  test-sqlite.c
inotdo/: Makefile  inotdo.c
klog/: klog-server.c  klog_setup.sh  klogwatch.c  otvlog.h
klog-agent/: Makefile  klog-agent.c
klog-bench/: Makefile
klog-sewer/: Makefile  klog-sewer.c
klog-stub/: Makefile  klogwatch.c
kong/: Makefile
kongso/: Makefile  kongso.c
load-monitor/: Makefile  ldmon.c
mk.tools/: hook.pp.h  inst.busybox.sh  inst.otvapp.sh  otvapp.list
mk.zhujingban/: bkm.do  dabao  envfile.templ  init  muzei  otvapp.list
muzei/: muzei.c
nhlog/: Makefile  nhlog.c  nhlog.h
nilklog/: Makefile  nilklog.c
nsulog/: Makefile  nsulog.c  nsulog.h
otvdbus/: Makefile  Makefile.am  configure.ac  otv-marshal.c  otv-marshal.h  otv-marshal.list  otvdbus-connection.c  otvdbus-connection.h  otvdbus-controller.c  otvdbus-controller.h  otvdbus-server.c  otvdbus-server.h  otvdbus.pc.in  otvdbus_shared_proxy.c  otvdbus_shared_proxy.h  otvdbus_util.c  otvdbus_util.h  otvlog.h
patch/: Log.js  ccomx_OtvNpObject.cpp  dbus-connection.c  ipnetwork_Makefile.am  objdump.js  spawn_with_env.c
patch/appman/: appman_controller.c  set_nm_env_for_appman.snippet
patch/dbus/: dbus-1.4.16-dispatch-hook.patch  runpatch
patch/otvlog/: Makefile.am
patch/ui/: ccomx_OtvNpObject.cpp  klog_def.h  objdump.js
patch/ui/ccomx/npapi-plugin/: ccomx_CCOMXMain.cpp  ccomx_OtvNpObject.cpp
patch/ui/js/jsfw/apps/core/: Log.js
rlog/: Makefile  README  klog_setup.sh  klogwatch.c  rlog.c  rlog.h
scripts/: banner  haha  haha.daorg  init  muzei  myenv
skm/otvlog/: Makefile.am  dalog.c  dalog.h  dalog_setup.c  dbus_dumper.c  helper.h  nsulog.c  nsulog.h  otvlog.h
skm/patches/: dbus-connection.c  runshell.c
skm/tools/: m  skmpost.sh  skmserv.py  xxx  yyy
templ/: br-Makefile  br-opentv_build.mak  br-package-Makefile.in  ekioh_sdk-Makefile  klagent.sh  nemo.sh  otvlog.h  pcd  rcS  rtk
templ/otvlog/: nsulog.c  nsulog.h  otvlog.h
timemgr/: Makefile  app_time_source.xml  timemgr.c  timemgr.h  timemgr.xml  timemgr_controller.c  timemgr_controller.h  timemgr_internal.h  timemgr_ipc_server.h  timemgr_locale_watcher.c  timemgr_updater.c  timemgr_utils.c  timemgr_zone_patcher.c  timeproxy.c  timeproxy.h  timesrc_app.c  timesrc_test.c
tools/: mk-updatefile.py  mk.upimage
tools/relimg_builder/: rib.py
welcome/: main.c
welcome/fbox/: fbox.c  fbox.h  fbox.mips.c  fbutton.c  fbutton.h  fdesktop.c  fdesktop.h  fedit.c  fedit.h  fimage.c  fimage.h  pat.c  pat.h
xlog/: Makefile  klog.c  klog.h  main.c  xlog.c  xlog.h
